Updated workflow to run mvn test seperatly for each version

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,5 +16,7 @@ jobs:
             java-version: '21'
             distribution: 'temurin'
             architecture: x64
-        - name: Run Test
-          run: mvn test
+        - name: Run Traditional Test
+          run: mvn test -Dtest="PlaywrightTraditionalTest"
+        - name: Run LLM Test
+          run: mvn test -Dtest="PlaywrightLLmTests"
