Modified workflow to call correct LLM Test file

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,4 +19,4 @@ jobs:
         - name: Run Traditional Test
           run: mvn test -Dtest="PlaywrightTraditionalTest"
         - name: Run LLM Test
-          run: mvn test -Dtest="PlaywrightLLmTests"
+          run: mvn test -Dtest="PlaywrightLLMTests"
